# flipper-pc-monitor-backend

./: Cargo.toml  tray.rc
src/: main.rs  system_info.rs
