[package]
name = "flipper-pc-monitor-backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
btleplug = "0.10.5"
futures = "0.3.31"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.30.13"
tokio = { version = "1.45.0", features = ["full"] }
tray-item = "0.10.0"
uuid = "1.16.0"
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}
xmltojson = { git = "https://github.com/rtyler/xmltojson", version = "0.2.0" }

[build-dependencies]
embed-resource = "3.0.2"
